# fp-tws10

./: CMakeLists.txt  README.md  index.html
examples/: mnist_io.cpp  mnist_io.h  seeinInMNIST.cpp  seeinInSVHN.cpp  svhn_io.cpp  svhn_io.h
src/: feature_projector.cpp  feature_projector.h  gl_helpers.cpp  gl_helpers.h  mnist_io.cpp  mnist_io.h  seeinIn.cpp  seeinIn.h  seein_in_mouse_handler.cpp  seein_in_mouse_handler.h
src/fonts/: font_face.cpp  font_face.h  font_manager.cpp  font_manager.h
src/mouse_handlers/: embedding_view_mouse_handler.cpp  embedding_view_mouse_handler.h  filter_view_mouse_handler.cpp  filter_view_mouse_handler.h  multi_embedding_view_mouse_handler.cpp  multi_embedding_view_mouse_handler.h  seein_in_mouse_handler.cpp  seein_in_mouse_handler.h  single_embedding_view_mouse_handler.cpp  single_embedding_view_mouse_handler.h  tool_view_mouse_handler.cpp  tool_view_mouse_handler.h
src/shaders/: scatter_plot.frag  scatter_plot.vert  scatter_plot_shader.cpp  scatter_plot_shader.h
src/util/: caffe_helpers.cpp  caffe_helpers.h  geometry.cpp  geometry.h  gl_helpers.h  image_io.cpp  image_io.h  misc.h  selection_manager.cpp  selection_manager.h  string_format.cpp  string_format.h
src/visualizations/: embedding_sub_viz.cpp  embedding_sub_viz.h  embedding_viz.cpp  embedding_viz.h  feature_projection_viz.cpp  feature_projection_viz.h  filter_response_viz.cpp  filter_response_viz.h  multi_embedding_viz.cpp  multi_embedding_viz.h  single_embedding_viz.cpp  single_embedding_viz.h  toolbox.cpp  toolbox.h
